--- a/paper/repaper/paper_tesis.tex
+++ b/paper/repaper/paper_tesis.tex
@@ -1,4 +1,4 @@
-	\documentclass[spanish,twocolumn]{article}
+\documentclass[spanish,twocolumn]{article}
 \usepackage{spconf,amsmath,graphicx}
 \usepackage{mathptmx}
 \usepackage{mathtools}
@@ -57,20 +57,20 @@ SMPSO, CLAHE, Entropía, Entropía Local, SSIM, LTG, Mejora del Contraste, Optim
 %
 \section{Introducción}
 \label{sec:intro}
-%necesitamos citaciones sobre las distorsiones, algunos paper que hablen por lo menos brevemente del problema%
-Las imágenes digitales están expuestas a sufrir una variedad de distorsiones durante su procesamiento, compresión, almacenamiento, transmisión y reproducción, y cualquiera de ellas puede resultar en la degradación de la calidad visual.
+Las imágenes digitales están expuestas a sufrir una variedad de distorsiones durante su procesamiento, compresión, almacenamiento, transmisión y reproducción, y cualquiera de ellas puede resultar en la degradación de la calidad visual \cite{digitalimganalysis}.
+
 %citaciones sobre algunas de las técnicas existentes. Inclusive sería bueno especificar técnicas basadas en optimización%
-El principal objetivo de las técnicas de mejora es procesar una imagen de forma que resulte más adecuada que la original para una aplicación específica. Existen muchas técnicas de Mejora del Contraste en el procesamiento de imágenes usadas para mejorar la apariencia de una imagen y hacerla más apta para la percepción visual humana. Una estrategia fundamental para la mayoría de las técnicas de Mejora de Contraste es la transformación del histograma. La técnica más usada debido a su simplicidad y eficienca es la Ecualización del Histograma (HE). %esto se debe reescribir, porque estamos dando a entender que no se investigó suficiente sobre el tema
 
-Es de gran importancia realizar la Mejora del Contraste de imágenes de carácter médico, debido a que de esta manera es posible acentuar y mantener las características presentes en ellas. Las radiografías presentan características particulares de contraste, como en el caso de radiografías del tórax y mamografías, donde pueden existir diferencias de constraste notorias debido a las características de atenuación de los Rayos X \cite{chang1998image}.
+El objetivo principal de las técnicas de mejora es procesar una imagen de forma que resulte más adecuada que la original para una aplicación específica. 
+En \cite{toolperceptualquality} se propone una evaluación de la calidad perceptible de imágenes monocromáticas, y se realiza una comparación con modelos de calidad basado en la información estructural de la imagen (SSIM) y distribución de Wigner, concluyendo que se debe buscar nuevas métricas que aprovechen las propiedades de los modelos de calidad incluyendo modelos del SVH (Sistema Visual Humano).
+En \cite{ssimparametersandwindowsiz} se propone un análisis empírico de los valores más apropiados para las diferentes constantes usadas en las ecuaciones SSIM y la importancia del tamaño de ventana en el cálculo de MSSIM, donde se observó que el comportamiento del SSIM depende de los valores asignados a las constantes y en el tamaño de las ventanas seleccionadas.
+En \cite{ltg2014} se propone un modelo que se aproxima al ideal de las métricas de evaluación de la calidad de la imagen(Image quality assesment - IQA), partiendo de la hipótesis de que la percepción de la calidad de la imagen dependen de las distorsiones locales sobresalientes y la degradación de la calidad global, dicho modelo fue comparado con los enfoques clásicos de full-reference (FR) y se concluyó que el modelo propuesto presentaba mejores resultados en comparación a los demás métodos.
+Aunque el campo de procesamiento digital de imágenes está construido sobre una base de formulaciones matemáticas y probabilísticas, la intuición y el análisis humano juegan un papel central en la elección de una técnica frente a otra, y esta elección se hace a menudo sobre la base de juicios subjetivos, visuales, por lo tanto, se necesita conseguir medidas cuantitativas que puedan valorar de forma automática la calidad de la imagen percibida.
+El histograma de una imagen es ampliamente utilizado como herramienta tanto cualitativa como cuantitativa, es una buena herramienta para la mejora de contraste. Existen enfoques de mejora global y local, los enfoques de mejora local demuestran ser sumamente útiles al momento de realizar detalles en imágenes médicas, y existen diversas propuestas que se centran en mejorar el contraste en radiografías \cite{1625082,4712472,5360176}. Debido a ello en esta  propuesta se analizan pares de métricas de calidad, realizando una comparación de la correlación entre las mismas, la entropía/entropía local vs. SSIM y entropía/entropía local vs LTG, para identificar las métricas más adecuadas para la optimización multiobjetivo de la mejora de contraste de una imagen. 
+Se utilizará una meta heurística de optimización de objetivos, de manera a sintonizar los parámetros de entrada del algoritmo de mejora del contraste descripto en la sección \ref{sec:clahe}, de manera a obtener un grupo de imágenes contrastadas, las cuales serán evaluadas en cuanto a la ganancia de información proveída y distorsión introducida por la ecualización (sección \ref{sec:metricas}).
+El resto del trabajo se organiza de la siguiente manera: En la sección \ref{sec:clahe} se describe brevemente el algoritmo de mejora de contraste adoptado; en la sección \ref{sec:metricas} se muestran las métricas de evaluación de resultados utilizadas; en la sección \ref{sec:formulacion} se plantea de manera formal el problema que se intenta resolver; en la sección \ref{sec:propuesta} se muestra la aplicación de la correlación entre las métricas seleccionas %no estoy segura que poner aca%; luego en la sección \ref{sec:resultadosdiscusion} se discuten los resultados, y finalmente en la sección \ref{sec:conclusion} se detallan las conclusiones correspondientes.
 
-Los enfoques de mejora local demuestran ser sumamente útiles al momento de realzar detalles en imágenes médicas, y existen diversas propuestas que se centran en mejorar el contraste en radiografías \cite{1625082,4712472,5360176}. Debido a ello en esta  propuesta se estudia la comparación de la correlación de entre dos metricas, la entropía local vs. SSIM y la entropía local vs LTG. %vamos a reescribir, lo que vamos a plantear es que la selección de métricas debe basarse en qué tan contradictorios son los parámetros que se seleccionan%
 
- Se utilizará una metaheurística de optimización de objetivos, de manera a sintonizar los parámetros de entrada del algoritmo de mejora del contraste descripto en la sección \ref{sec:clahe}, de manera a obtener un grupo de imágenes contrastadas, las cuales serán evaluadas en cuanto a la ganancia de información proveída y distorsión introducida por la ecualización (sección \ref{sec:metricas}).
-
-%más o menos la mitad de las citaciones de los artículos van en la introducción, entonces se debe agregar más acá%
-
-%acá falta la parte que dice: en la sección 2 se analiza tal cosa, en la sección 3 se ve tal cosa, etc etc. Es super importante que agreguen todas las secciones que va a tener el paper, y después desarrollar, para que tengan una hoja de ruta%
 
 %lo que considero fundamental es que se distinga ya en la introducción, que este trabajo trata sobre el problema de selección de métricas para la optimización multiobjetivo de la mejora de contraste, y no sobre la optimización en sí%
 
@@ -83,9 +83,7 @@ El algoritmo AHE original presenta problemas de amplificación del ruido, por ta
 
 \section{métricas de evaluación}
 \label{sec:metricas}
-%que paso con entropia local? tambien es necesario desarrollar un poco y referenciar%
-%Seria mejor escribir algo como: Se realiza una selección de alternativas a partir de la necesidad de encontrar métricas que proporcionen el mejor balance entre mejora del contraste y distorsión. En esta sección se muestran las 4 métricas seleccionadas... completar un poquitito más%
-Se adoptan tres métricas consideradas importantes para las comparaciones de los resultados obtenidos por el CLAHE que nos permitan determinar cuantitativamente la calidad de las mismas; éstas son la Entropia local como medida de mejora del contraste, el Índice de Similitud Estructural y el modelo Local Tuned Globa como medidas de distorsión de la imagen.
+Se realiza una selección de alternativas a partir de la necesidad de encontrar métricas que proporcionen el mejor balance entre mejora del contraste y distorsión. En esta sección se muestran las cuatro métricas seleccionadas para el análisis y comparaciones de correlación entre las mismas. Éstas son la Entropía y Entropía local como medidas de mejora del contraste, el Índice de Similitud Estructural y el modelo Local Tuned Global como medidas de distorsión de la imagen.
 
 \subsection{Entropía}
 \label{ssec:entropia}
@@ -105,7 +103,8 @@ Donde $\mathcal{P}_i$ es la probabilidad de ocurrencias del nivel de gris $i$ en
 
 \subsection{Índice de similitud estructural (SSIM)}
 \label{ssec:ssim}
-El {Índice de Similitud Estructural (SSIM)} \cite{wang2004image} es un coeficiente que mide el grado de distorsión producida en una imagen resultante $T$ a consecuencia de aplicar una Mejora del Contraste a una imagen original $I$. SSIM se calcula por bloques, por lo que si definimos dos ventanas $I_x$ e $T_y$ para las imágenes original y resultante, respectivamente, se define el SSIM como se muestra abajo:
+El {Índice de Similitud Estructural (SSIM)} \cite{wang2004image} es un coeficiente que mide el grado de distorsión producida en una imagen resultante $T$ a consecuencia de aplicar una Mejora del Contraste a una imagen original $I$. 
+EL SSIM mide las similitudes entre tres elementos de las dos imágenes: la luminancia (intensidad media), el contraste y la estructura. SSIM se calcula por bloques, por lo que si definimos dos ventanas $I_x$ e $T_y$ para las imágenes original y resultante, respectivamente, se define el SSIM como se muestra abajo:
 
 \begin{equation}\label{eq:ssim}
 \resizebox{.9\hsize}{!}
@@ -118,10 +117,8 @@ Donde $\mu_{I_x}$ es el promedio de intensidades de $I_x$; $\mu_{T_y}$ es el pro
 
 \subsection{ Local Tuned Global Model (LTG)}
 \label{ssec:ltg}
-%falta la citación, y mencionar que es enfoque basado en gradiente
-El modelo {Local Tuned Global (LTG)} está inspirado en las metricas IQA (Image Quality Assessment)\cite{ltg2014}, fue introducido bajo la hipotesis de que la percepción visual humana en  la calidad de la imagen depende de la distorsión local resaltante y la degradación global de la calidad. %falta citación del ltg, mencionar que es un enfoque basado en gradiente de la imagen y citar
-
-El LTG es un enfoque basado en el gradiente de la imagen, ya que esta es muy sensible a las distorsiones de la misma, tambien extrae información sobre la luminancia (brillo percibido por el ojo humano) y la crominancia (información del color) de la imagen de entrada y la imagen distorsionada, luego mide la distorsión local resaltante y la degradación global de la calidad en la información obtenida sobre la luminancia y compara las diferencias en la informacion obtenida sobre la crominancia, derivando así el valor global de la calidad de la imagen.
+El modelo {Local Tuned Global (LTG)} está inspirado en las métricas IQA (Image Quality Assessment)\cite{ltg2014}, fue introducido bajo la hipótesis de que la percepción visual humana en  la calidad de la imagen depende de la distorsión local resaltante y la degradación global de la calidad. 
+El LTG es un enfoque basado en el gradiente de la imagen, ya que ésta es muy sensible a las distorsiones de la misma; así también extrae información sobre la luminancia (brillo percibido por el ojo humano) y la crominancia (información del color) de la imagen de entrada y la imagen distorsionada, luego mide la distorsión local resaltante y la degradación global de la calidad en la información obtenida sobre la luminancia y compara las diferencias en la información obtenida sobre la crominancia, derivando así el valor global de la calidad de la imagen.
 
 \begin{equation}\label{eq:ltg}
 \resizebox{.6\hsize}{!}
@@ -140,8 +137,7 @@ $G = \sqrt[]{G_{h}^{2} + G_{v}^{2}}$
 
 Donde:
 \begin{itemize}
- \item $G_{m}$ =  es el gradiente, se adopta el operador Scharr  \cite{gradiente} 
-  medio de la imagen original y distorsionada.
+ \item $G_{m}$ =  es el gradiente medio de la imagen original y distorsionada, se adopta el operador Scharr  \cite{gradiente}.
  \item $ G_{s}$ = indica los pixeles con valores S\% más altos en $G_{m}$.
  \item  $I_{m}$ y $Q_{m}$ = contienen la información de crominancia de las imagenes. 
 \end{itemize} 
@@ -197,53 +193,7 @@ sujeto a:
 
 Ésto significa que los valores de $\mathcal{R}$ solamente pueden tomar valores enteros positivos entre $(2,2)$ y $(M,N)$ y que $\mathscr{C}$ puede tomar un valor mayor a cero y menor o igual a 1.
 
-%%esto es exactamente igual al paper anterior? puede ser que no necesitemos incluir, mejor solamente citar
-\begin{algorithm}[H]
-    \scriptsize
-    \begin{algorithmic}[1]
-        \Require imagen de entrada $I$, número de partículas $\Omega$, número de iteraciones $t_{max}$
-        \State Inicializar los parámetros $\omega$, $C_1$, $C_2$, $t=0$, $lower\_limit_1$, $lower\_limit_2$, $lower\_limit_3$, $upper\_limit_1$, $upper\_limit_2$, $upper\_limit_3$, $\mathscr{X}$
-        %\For{cada $i$-ésima partícula del enjambre}
-        %    \State Inicializar la posición $x_i$ aleatoriamente
-        %    \State Inicializar la velocidad $v_i$ a 0
-        %    \State ${imagenMejorada}$ = CLAHE(${x_i}$, ${imagenOriginal}$)
-        %    \State ${f_i}$ = evaluarAptitud(${imagenOriginal}$, ${imagenMejorada}$)
-        %    \State Establecer el mejor individual inicial $p_i$ por el valor inicial $x_i$
-        %    \If{$f_i < f_{p_g}$}
-        %        \State reemplazar $p_g$ por el valor de $x_i$
-        %    \EndIf
-        %\EndFor
-        \While{$t$ $<$ $t_{max}$}
-            \For{cada $i$-ésima partícula del enjambre}
-                \State Calcular la nueva velocidad de la partícula $\overrightarrow{v_i}^t$ utilizando la ecuación \eqref{eq:psobasico2}, sujeto a las restricciones impuestas por \eqref{eq:restricciondelta}
 
-%                \begin{equation*}\label{eq:psobasico2}
-%                    \overrightarrow{v_i}(t) = \omega \cdot \overrightarrow{v_i} \cdot (t-1) + C_1 \cdot r_1 \cdot (\overrightarrow{x_{p_i}}-\overrightarrow{x_i}) + C_2 \cdot r_2
-%                \end{equation*}
-
-
-
-                \State Calcular la nueva posición de la partícula $\overrightarrow{x_i}^t$ con la expresión de posición \eqref{eq:psobasico}
-                %\begin{equation*}\label{eq:psobasico}
-                %    \overrightarrow{x_i}(t) = \overrightarrow{x_i}(t-1) + \overrightarrow{v_i}(t)
-                %\end{equation*}
-
-                \State ${T}$ = CLAHE(${\overrightarrow{x_i}^t}$, ${I}$)
-                \State ${f^t_i}$ = $f(I, \overrightarrow{x_i}^t)$%evaluarAptitud(${I}$, ${T}$)
-                \If{$f^t_i < f_{\overrightarrow{x}_{p_i}}$}
-                    \State reemplazar $\overrightarrow{x}_{p_i}$ por el nuevo valor de $\overrightarrow{x_i}^t$
-                \EndIf
-                \If{$ \overrightarrow{x_i} \succ \overrightarrow{x_{g_i}}$  }
-                    \State actualizar $\mathscr{X}$
-                \EndIf
-                \State $t$ = $t$ + 1
-            \EndFor
-        \EndWhile
-    \Ensure $\mathscr{X}$
-    \end{algorithmic}
-    \caption{Algoritmo $PSO-CLAHE$ Multiobjetivo.}
-    \label{alg:pso_clahe}
-\end{algorithm}
 
 \section{propuesta}
 \label{sec:propuesta}
