--- a/paper/repaper/paper_tesis.tex
+++ b/paper/repaper/paper_tesis.tex
@@ -66,7 +66,8 @@ En \cite{toolperceptualquality} se propone una evaluación de la calidad percept
 En \cite{ssimparametersandwindowsiz} se propone un análisis empírico de los valores más apropiados para las diferentes constantes usadas en las ecuaciones SSIM y la importancia del tamaño de ventana en el cálculo de MSSIM, donde se observó que el comportamiento del SSIM depende de los valores asignados a las constantes y en el tamaño de las ventanas seleccionadas.
 En \cite{ltg2014} se propone un modelo que se aproxima al ideal de las métricas de evaluación de la calidad de la imagen(Image quality assesment - IQA), partiendo de la hipótesis de que la percepción de la calidad de la imagen dependen de las distorsiones locales sobresalientes y la degradación de la calidad global, dicho modelo fue comparado con los enfoques clásicos de full-reference (FR) y se concluyó que el modelo propuesto presentaba mejores resultados en comparación a los demás métodos.
 Aunque el campo de procesamiento digital de imágenes está construido sobre una base de formulaciones matemáticas y probabilísticas, la intuición y el análisis humano juegan un papel central en la elección de una técnica frente a otra, y esta elección se hace a menudo sobre la base de juicios subjetivos, visuales, por lo tanto, se necesita conseguir medidas cuantitativas que puedan valorar de forma automática la calidad de la imagen percibida.
-El histograma de una imagen es ampliamente utilizado como herramienta tanto cualitativa como cuantitativa, es una buena herramienta para la mejora de contraste. Existen enfoques de mejora global y local, los enfoques de mejora local demuestran ser sumamente útiles al momento de realizar detalles en imágenes médicas, y existen diversas propuestas que se centran en mejorar el contraste en radiografías \cite{1625082,4712472,5360176}. Debido a ello en esta  propuesta se analizan pares de métricas de calidad, realizando una comparación de la correlación entre las mismas, la entropía/entropía local vs. SSIM y entropía/entropía local vs LTG, para identificar las métricas más adecuadas para la optimización multiobjetivo de la mejora de contraste de una imagen. 
+El histograma de una imagen es ampliamente utilizado como herramienta tanto cualitativa como cuantitativa, es una buena herramienta para la mejora de contraste. Existen enfoques de mejora global y local, si se usa sólo información global, no se alcanza un buen realce de contraste, debido a que las técnicas globales podrían causar un efecto de saturación de intensidades, los enfoques locales consideran una ventana local para cada píxel y calcula el valor de la nueva intensidad basado en el histograma local definido, todos los píxeles de una ventana local contribuyen igualmente a la determinación del nuevo valor del píxel central que está siendo considerado, solucionando el problema que podrían presentar los enfoques globales  \cite{1419470}.
+Los enfoques de mejora local demuestran ser sumamente útiles al momento de realizar detalles en imágenes médicas, y existen diversas propuestas que se centran en mejorar el contraste en radiografías \cite{1625082,4712472,5360176}. Debido a ello en esta  propuesta se analizan pares de métricas de calidad, realizando una comparación de la correlación entre las mismas, la entropía/entropía local vs. SSIM y entropía/entropía local vs LTG, para identificar las métricas más adecuadas para la optimización multiobjetivo de la mejora de contraste de una imagen. 
 Se utilizará una meta heurística de optimización de objetivos, de manera a sintonizar los parámetros de entrada del algoritmo de mejora del contraste descripto en la sección \ref{sec:clahe}, de manera a obtener un grupo de imágenes contrastadas, las cuales serán evaluadas en cuanto a la ganancia de información proveída y distorsión introducida por la ecualización (sección \ref{sec:metricas}).
 El resto del trabajo se organiza de la siguiente manera: En la sección \ref{sec:clahe} se describe brevemente el algoritmo de mejora de contraste adoptado; en la sección \ref{sec:metricas} se muestran las métricas de evaluación de resultados utilizadas; en la sección \ref{sec:formulacion} se plantea de manera formal el problema que se intenta resolver; en la sección \ref{sec:propuesta} se muestra la aplicación de la correlación entre las métricas seleccionas %no estoy segura que poner aca%; luego en la sección \ref{sec:resultadosdiscusion} se discuten los resultados, y finalmente en la sección \ref{sec:conclusion} se detallan las conclusiones correspondientes.
 
@@ -76,8 +77,10 @@ El resto del trabajo se organiza de la siguiente manera: En la sección \ref{sec
 
 \section{Contrast Limited Adaptive Histogram Equalization (CLAHE)}
 \label{sec:clahe}
-Este enfoque de mejora de contraste presentado en \cite{Zuiderveld:1994:CLA:180895.180940} es una extensión del algoritmo original Adaptive Histogram Equalization (AHE) \cite{pizer1987adaptive}; en ambos métodos se implementa un enfoque de Ecualización del Histogama local basada en {\it Regiones Contextuales}, que representan porciones de la imagen, cuyas dimensiones están delimitadas por $(\mathcal{R}_x, \mathcal{R}_y)$, para realizar la ecualización por sectores de la imagen. Las inconsistencias entre fronteras de las secciones la imagen se corrigen aplicando un esquema de interpolación bilineal. 
-El algoritmo AHE original presenta problemas de amplificación del ruido, por tanto en CLAHE se implementa una limitación de la cantidad de pixeles que pueden alcanzar cierto nivel de gris dentro del histograma local; aquí se define el coeficiente {\it Clip Limit} $\mathcal{C}$, como un factor que está fuertemente relacionado con los contenidos del histograma. El mismo permite realizar cortes en picos del histograma local, que se traducen en ruido dentro de la imagen.
+Este enfoque de mejora de contraste presentado en \cite{Zuiderveld:1994:CLA:180895.180940} es una extensión del algoritmo original Adaptive Histogram Equalization (AHE) \cite{pizer1987adaptive}; en ambos métodos se implementa un enfoque de Ecualización del Histograma local basada en {\it Regiones Contextuales}, que representan porciones de la imagen, cuyas dimensiones están delimitadas por $(\mathcal{R}_x, \mathcal{R}_y)$, para realizar la ecualización por sectores de la imagen. Las inconsistencias entre fronteras de las secciones de la imagen se corrigen aplicando un esquema de interpolación bilineal. 
+El algoritmo AHE original presenta problemas de amplificación del ruido, por tanto en CLAHE se implementa una limitación de la cantidad de píxeles que pueden alcanzar cierto nivel de gris dentro del histograma local; aquí se define el coeficiente {\it Clip Limit} $\mathcal{C}$, como un factor que está fuertemente relacionado con los contenidos del histograma. El mismo permite realizar cortes en picos del histograma local, que se traducen en ruido dentro de la imagen.
+El algoritmo CLAHE fue desarrollado originalmente para trabajar con imágenes médicas y ha demostrado ser satisfactorio para mejorar imágenes de bajo contraste \cite{SMG11,MR13}
+La capacidad de controlar el grado de mejora del contraste por medio de la manipulación de sus parámetros, lo hace una buena herramienta para conseguir mejores resultados en cuanto a las imágenes con bajos contrastes \cite{morebrizuela201}. 
 
 %acá hay algo importante que creo que falta, hay que mostrar que clahe (y sus posibles variantes) son muy efectivas para realizar la mejora del contraste en imágenes médicas; además podemos agregar alguna grafiquita, porque de otra forma queda muy escueto%
 
