se agregaron algunas referencias.

--- a/paper/repaper/refs1.bib
+++ b/paper/repaper/refs1.bib
@@ -29,8 +29,8 @@ pages = 	 "107-111"
  title = {Graphics Gems IV},
  editor = {Heckbert, Paul S.},
  year = {1994},
- isbn = {0-12-336155-9},
- pages = {474--485},
+ isbn = "0-12-336155-9",
+ pages = {474-485},
  numpages = {12},
  url = {http://dl.acm.org/citation.cfm?id=180895.180940},
  acmid = {180940},
@@ -97,8 +97,6 @@ pages = 	 "107-111"
   organization={IEEE}
 }
 
-
-
 @incollection{kwok2013locally,
   title={Locally-Equalized Image Contrast Enhancement Using PSO-Tuned Sectorized Equalization},
   author={Kwok, NM and Wang, D and Ha, QP and Fang, G and Chen, SY},
@@ -150,7 +148,6 @@ month={Dec},
 volume={10}, 
 number={4}, 
 pages={589-592}, 
-keywords={entropy;picture processing;adaptive smoothing processing;digital entropy;entropic contrast enhancement;global entropy transformation;information theory;local contrast;picture contrast enhancement technique;Brightness;Computer vision;Entropy;Histograms;Image edge detection;Image processing;Image reconstruction;Image retrieval;Information theory;Smoothing methods}, 
 doi={10.1109/42.108593}, 
 ISSN={0278-0062},}
 
@@ -161,7 +158,6 @@ title={Real time enhancement of cephalometric radiographies},
 year={2006},
 month={April},
 pages={972-975},
-keywords={bone;diagnostic radiography;filtering theory;image enhancement;medical image processing;statistical analysis;bone pixel separation;bone tissue;cephalometric radiographies;gamma corrections;histogram based clustering;real time filtering;real time image enhancement;soft tissue;Anatomical structure;Biological tissues;Bone tissue;Dentistry;Filtering;Filters;Histograms;Radiography;Surgery;Visualization},
 doi={10.1109/ISBI.2006.1625082},}
 
 @INPROCEEDINGS{4712472,
@@ -171,10 +167,8 @@ title={Nonlinear multi-scale contrast enhancement for chest radiograph},
 year={2008},
 month={Oct},
 pages={3184-3187},
-keywords={decomposition;image enhancement;medical image processing;radiography;chest image;chest radiograph;image decomposition;multiscale decomposition;nonlinear enhancement function;nonlinear multiscale contrast enhancement;spatial domain;visible artifacts;Band pass filters;Cardiology;Computer architecture;Diagnostic radiography;Humans;Image processing;Kernel;Pattern recognition;Rendering (computer graphics);X-ray imaging;Adaptive contrast enhancement;chest radiography;multi-scale},
 doi={10.1109/ICIP.2008.4712472},
 ISSN={1522-4880},}
-
 
 @INPROCEEDINGS{5360176,
 author={Parveen, N.R.S. and Sathik, M.M.},
@@ -184,5 +178,57 @@ year={2009},
 month={Nov},
 volume={2},
 pages={391-394},
-keywords={image enhancement;medical image processing;bone fracture images;contrast limited adaptive histogram equalization;equalization methods;histogram equalization;image enhancement;Adaptive equalizers;Bones;Brightness;Filters;Gaussian noise;Histograms;Image enhancement;X-ray detection;X-ray detectors;X-ray imaging;Adaptive Histogram Equalization;Contrast Limited Adaptive Histogram Equalization;Histogram Equalization;Image Processing;Median Filter},
 doi={10.1109/ICCTD.2009.115},}
+
+
+@article{he,
+  title={ Non-parametric modified histogram equalisation for contrast enhancement},
+  author={Shashi Poddar,et Al},
+  journal={IET Image Processing},
+  pages={7:641-652},
+  year={2013},
+  month={Oct},
+}
+
+@article{fuzzy,
+  title={Contrast enhancement and brightness preserving of digital mammograms using fuzzy clipped contrast-limited adaptive histogram equalization algorithm},
+  author={S. Jenifer, et al},
+  journal={Appl. Soft Comput. J.},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@INPROCEEDINGS{morebrizuela2014,
+author={Moré, Luis G. and Brizuela, Marcos A. and Vázquez Noguera, José Luis and Pinto-Roa, Diego P. and Legal Ayala, Horacio},
+booktitle={Proceedings of the 3rd. Conference of Computational Interdisciplinary Sciences},
+title={Particle Swarm Optimization applied to parameter tuning of CLAHE based on Entropy and Structural Similarity Index},
+year={2014},
+month={Oct},
+keywords={contrast enhancement, particle swarm optimization, structural similarity index, entropy, contrast limited adaptive histogram equalization},
+}
+
+@INPROCEEDINGS{localentropy,
+  author={Pradipta Maji, et Al.},
+  title={Pattern Recognition and Machine Intelligence},
+  booktitle={5th International Conference, PReMI 2013},
+  pages={465-473},
+  year={2013},
+}
+
+@BOOK{correlacion,
+author = {Antonio Nieves Hurtado, Federico C. Domínguez},
+year = 2009,
+title = {Probabilidad y Estadística para Ingeniería, un enfoque moderno},
+chapter = 13,
+publisher = {McGraw Hill},
+}
+
+@BOOK{geneticAlgorithm,
+author = {Sara Hashemi, et Al.},
+month = {October},
+year = 2010,
+title = {Pattern Recognition Letters},
+pages={1816-1824},
+volume=31,
+publisher = {Elsevierl},
+}
