--- a/paper/repaper/paper_tesis.tex
+++ b/paper/repaper/paper_tesis.tex
@@ -57,30 +57,35 @@ SMPSO, CLAHE, Entropía, Entropía Local, SSIM, LTG, Mejora del Contraste, Optim
 %
 \section{Introducción}
 \label{sec:intro}
-Las imágenes digitales están expuestas a sufrir una variedad de distorsiones durante su procesamiento, compresión, almacenamiento, transmisión y reproducción, y cualquiera de ellas puede resultar en la degradación de la calidad visual \cite{digitalimganalysis}.
+Las imágenes digitales están expuestas a sufrir una variedad de distorsiones durante su procesamiento, compresión, almacenamiento, transmisión y reproducción, y cualquiera de ellas puede resultar en la degradación de la calidad visual %\cite{digitalimganalysis}.
 
-%citaciones sobre algunas de las técnicas existentes. Inclusive sería bueno especificar técnicas basadas en optimización%
+%citaciones sobre algunas de las técnicas existentes de HE. Inclusive sería bueno especificar técnicas basadas en optimización%
 
 El objetivo principal de las técnicas de mejora es procesar una imagen de forma que resulte más adecuada que la original para una aplicación específica. 
-En \cite{toolperceptualquality} se propone una evaluación de la calidad perceptible de imágenes monocromáticas, y se realiza una comparación con modelos de calidad basado en la información estructural de la imagen (SSIM) y distribución de Wigner, concluyendo que se debe buscar nuevas métricas que aprovechen las propiedades de los modelos de calidad incluyendo modelos del SVH (Sistema Visual Humano).
-En \cite{ssimparametersandwindowsiz} se propone un análisis empírico de los valores más apropiados para las diferentes constantes usadas en las ecuaciones SSIM y la importancia del tamaño de ventana en el cálculo de MSSIM, donde se observó que el comportamiento del SSIM depende de los valores asignados a las constantes y en el tamaño de las ventanas seleccionadas.
-En \cite{ltg2014} se propone un modelo que se aproxima al ideal de las métricas de evaluación de la calidad de la imagen(Image quality assesment - IQA), partiendo de la hipótesis de que la percepción de la calidad de la imagen dependen de las distorsiones locales sobresalientes y la degradación de la calidad global, dicho modelo fue comparado con los enfoques clásicos de full-reference (FR) y se concluyó que el modelo propuesto presentaba mejores resultados en comparación a los demás métodos.
+%En \cite{toolperceptualquality} se propone una evaluación de la calidad perceptible de imágenes monocromáticas, y se realiza una comparación con modelos de calidad basado en la información estructural de la imagen (SSIM) y distribución de Wigner, concluyendo que se debe buscar nuevas métricas que aprovechen las propiedades de los modelos de calidad incluyendo modelos del SVH (Sistema Visual Humano).
+%En \cite{ssimparametersandwindowsiz} se propone un análisis empírico de los valores más apropiados para las diferentes constantes usadas en las ecuaciones SSIM y la importancia del tamaño de ventana en el cálculo de MSSIM, donde se observó que el comportamiento del SSIM depende de los valores asignados a las constantes y en el tamaño de las ventanas seleccionadas.
+%En \cite{ltg2014} se propone un modelo que se aproxima al ideal de las métricas de evaluación de la calidad de la imagen(Image quality assesment - IQA), partiendo de la hipótesis de que la percepción de la calidad de la imagen dependen de las distorsiones locales sobresalientes y la degradación de la calidad global, dicho modelo fue comparado con los enfoques clásicos de full-reference (FR) y se concluyó que el modelo propuesto presentaba mejores resultados en comparación a los demás métodos.
 Aunque el campo de procesamiento digital de imágenes está construido sobre una base de formulaciones matemáticas y probabilísticas, la intuición y el análisis humano juegan un papel central en la elección de una técnica frente a otra, y esta elección se hace a menudo sobre la base de juicios subjetivos, visuales, por lo tanto, se necesita conseguir medidas cuantitativas que puedan valorar de forma automática la calidad de la imagen percibida.
-El histograma de una imagen es ampliamente utilizado como herramienta tanto cualitativa como cuantitativa, es una buena herramienta para la mejora de contraste. Existen enfoques de mejora global y local, si se usa sólo información global, no se alcanza un buen realce de contraste, debido a que las técnicas globales podrían causar un efecto de saturación de intensidades, los enfoques locales consideran una ventana local para cada píxel y calcula el valor de la nueva intensidad basado en el histograma local definido, todos los píxeles de una ventana local contribuyen igualmente a la determinación del nuevo valor del píxel central que está siendo considerado, solucionando el problema que podrían presentar los enfoques globales  \cite{1419470}.
-Los enfoques de mejora local demuestran ser sumamente útiles al momento de realizar detalles en imágenes médicas, y existen diversas propuestas que se centran en mejorar el contraste en radiografías \cite{1625082,4712472,5360176}. Debido a ello en esta  propuesta se analizan pares de métricas de calidad, realizando una comparación de la correlación entre las mismas, la entropía/entropía local vs. SSIM y entropía/entropía local vs LTG, para identificar las métricas más adecuadas para la optimización multiobjetivo de la mejora de contraste de una imagen. 
+
+%citacion de algun paper que hable de HE. 
+%mejora de contraste basada en optimizacion (existen varias tecnicas de mejoras de contraste basada en he, usando tecnicas de optimizacion, como la logica difusa, tesisMore, pso-clahe)
+El histograma de una imagen (HE) \cite{he} es ampliamente utilizado como herramienta tanto cualitativa como cuantitativa, es una buena herramienta para la mejora de contraste. Sin embargo, este y la mayoría de los otros métodos de mejora de contraste puede producir imágenes de aspecto no naturales y las imágenes obtenidas por estos métodos no son las deseables. Existen enfoques de mejora global y local, si se usa sólo información global, no se alcanza un buen realce de contraste, debido a que las técnicas globales podrían causar un efecto de saturación de intensidades, los enfoques locales consideran una ventana local para cada píxel y calcula el valor de la nueva intensidad basado en el histograma local definido, todos los píxeles de una ventana local contribuyen igualmente a la determinación del nuevo valor del píxel central que está siendo considerado, solucionando el problema que podrían presentar los enfoques globales \cite{1419470}. Existen varias técnicas de mejoras de contraste basadas en HE, usando técnicas de optimización con el uso de Algoritmos Genéticos \cite{geneticAlgorithm}, la Logica Difusa \cite{fuzzy}, Optimización por enjambres de partículas con parámetros del CLAHE (PSO-CLAHE) \cite{morebrizuela2014}.
+ 
+Los enfoques de mejora local demuestran ser sumamente útiles al momento de resaltar detalles en imágenes con gran cantidad de detalles finos. Existen diversas propuestas que se centran en mejorar el contraste en radiografías \cite{1625082,4712472,5360176}. Debido a ello en esta propuesta se analizan pares de métricas de calidad, realizando una comparación de la correlación entre las mismas, para identificar las métricas más adecuadas para la optimización multiobjetivo de la mejora de contraste de una imagen. 
 Se utilizará una meta heurística de optimización de objetivos, de manera a sintonizar los parámetros de entrada del algoritmo de mejora del contraste descripto en la sección \ref{sec:clahe}, de manera a obtener un grupo de imágenes contrastadas, las cuales serán evaluadas en cuanto a la ganancia de información proveída y distorsión introducida por la ecualización (sección \ref{sec:metricas}).
-El resto del trabajo se organiza de la siguiente manera: En la sección \ref{sec:clahe} se describe brevemente el algoritmo de mejora de contraste adoptado; en la sección \ref{sec:metricas} se muestran las métricas de evaluación de resultados utilizadas; en la sección \ref{sec:formulacion} se plantea de manera formal el problema que se intenta resolver; en la sección \ref{sec:propuesta} se muestra la aplicación de la correlación entre las métricas seleccionas %no estoy segura que poner aca%; luego en la sección \ref{sec:resultadosdiscusion} se discuten los resultados, y finalmente en la sección \ref{sec:conclusion} se detallan las conclusiones correspondientes.
 
-
+El resto del trabajo se organiza de la siguiente manera: En la sección \ref{sec:clahe} se describe brevemente el algoritmo de mejora de contraste adoptado; en la sección \ref{sec:metricas} se muestran las métricas de evaluación de resultados utilizadas; en la sección \ref{sec:formulacion} se plantea de manera formal el problema que se intenta resolver; en la sección \ref{sec:propuesta} se muestra la aplicación de la correlación entre las métricas seleccionadas. %no estoy segura que poner aca%; luego en la sección \ref{sec:resultadosdiscusion} se discuten los resultados, y finalmente en la sección \ref{sec:conclusion} se detallan las conclusiones correspondientes.
 
 %lo que considero fundamental es que se distinga ya en la introducción, que este trabajo trata sobre el problema de selección de métricas para la optimización multiobjetivo de la mejora de contraste, y no sobre la optimización en sí%
 
 \section{Contrast Limited Adaptive Histogram Equalization (CLAHE)}
 \label{sec:clahe}
 Este enfoque de mejora de contraste presentado en \cite{Zuiderveld:1994:CLA:180895.180940} es una extensión del algoritmo original Adaptive Histogram Equalization (AHE) \cite{pizer1987adaptive}; en ambos métodos se implementa un enfoque de Ecualización del Histograma local basada en {\it Regiones Contextuales}, que representan porciones de la imagen, cuyas dimensiones están delimitadas por $(\mathcal{R}_x, \mathcal{R}_y)$, para realizar la ecualización por sectores de la imagen. Las inconsistencias entre fronteras de las secciones de la imagen se corrigen aplicando un esquema de interpolación bilineal. 
+
 El algoritmo AHE original presenta problemas de amplificación del ruido, por tanto en CLAHE se implementa una limitación de la cantidad de píxeles que pueden alcanzar cierto nivel de gris dentro del histograma local; aquí se define el coeficiente {\it Clip Limit} $\mathcal{C}$, como un factor que está fuertemente relacionado con los contenidos del histograma. El mismo permite realizar cortes en picos del histograma local, que se traducen en ruido dentro de la imagen.
+
 El algoritmo CLAHE fue desarrollado originalmente para trabajar con imágenes médicas y ha demostrado ser satisfactorio para mejorar imágenes de bajo contraste \cite{SMG11,MR13}
-La capacidad de controlar el grado de mejora del contraste por medio de la manipulación de sus parámetros, lo hace una buena herramienta para conseguir mejores resultados en cuanto a las imágenes con bajos contrastes \cite{morebrizuela201}. 
+La capacidad de controlar el grado de mejora del contraste por medio de la manipulación de sus parámetros, lo hace una buena herramienta para conseguir mejores resultados en cuanto a las imágenes con bajos contrastes \cite{morebrizuela2014}. 
 
 %acá hay algo importante que creo que falta, hay que mostrar que clahe (y sus posibles variantes) son muy efectivas para realizar la mejora del contraste en imágenes médicas; además podemos agregar alguna grafiquita, porque de otra forma queda muy escueto%
 
@@ -102,7 +107,7 @@ Donde $\mathcal{P}_i$ es la probabilidad de ocurrencias del nivel de gris $i$ en
 
 \subsection{Entropía Local}
 \label{ssec:entropialocal}
-La Entropía Local representa la diferencia entre dos distribuciones de probabilidad en un mismo espacio. Está relacionado con la variación de los niveles de gris en la vecindad de un pixel. La Entropía Local divide la imagen en regiones separadas y luego analiza cada región como fuente informacíon separada.
+La Entropía Local \cite{localentropy} representa la diferencia entre dos distribuciones de probabilidad en un mismo espacio. Está relacionado con la variación de los niveles de gris en la vecindad de un pixel. La Entropía Local divide la imagen en regiones separadas y luego analiza cada región como fuente de información separada.
 Si se define una pequeña vecindad $\Omega_k$ de tamaño $M_k$ $X$ $N_k$ de la imagen, entonces la entropía de $\Omega_k$ queda definida como:
 
 \begin{equation}\label{eq:entropialocal}
@@ -150,12 +155,13 @@ Donde:
  \item $G_{m}$ =  es el gradiente medio de la imagen original y distorsionada, se adopta el operador Scharr  \cite{gradiente}.
  \item $ G_{s}$ = indica los pixeles con valores S\% más altos en $G_{m}$.
  \item  $I_{m}$ y $Q_{m}$ = contienen la información de crominancia de las imagenes. 
+%Gh? GM? y Gv?
 \end{itemize} 
 
 %Ésto vamos a poner en una sección aparte, hay que hacer hincapié en que el problema que se resuelve es la selección de métricas, y ésta es la herramienta que se usa para medir qué tan contradictorias son las métricas%
 \subsection{Correlación de Pearson}
-\label{ssec:correlacion}
-Es un índice que puede utilizarse para medir el grado de relación o covariación de dos variables distintas relacionadas linealmente,  siempre y cuando ambas sean cuantitativas.
+\label{ssec:correlacion}%citacion
+La Correlación de Pearson \cite{correlacion} es un índice que puede utilizarse para medir el grado de relación o covariación de dos variables distintas relacionadas linealmente,  siempre y cuando ambas sean cuantitativas.
 
 El valor del  índice de correlación varía en el intervalo [-1,1]. Esto es, si tenemos dos variables $X$ e $Y$, y definimos el coeficiente de correlación de Pearson entre estas dos variables como $r_{xy}$ entonces: 
 \begin{equation}\label{eq:gm}
@@ -256,9 +262,9 @@ La interacción entre CLAHE y las partículas de SMPSO se muestran en la \textbf
 %   \captionof{figure}{Interacción entre CLAHE y SMPSO.}
 % \end{minipage}
 
-% \twocolumn
-% \bibliographystyle{IEEEbib}
-% \bibliography{refs1}
+ \twocolumn
+ \bibliographystyle{IEEEbib}
+ \bibliography{refs1}
 
 
 
